# avid-rustacean

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  README.md  Shuttle.toml  avid-rustacean-frontend.js  avid-rustacean-frontend_bg.wasm  badge.json  config.toml  index.html  robots.txt  rss.xml  search_index.en.js  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ar_ci.yml  ci.yml  cleaniness.yml  coverage.yml  deployment.yml
about/: index.html
about-this-blog/: index.html
archive/: index.html
backend/: Cargo.toml  build.rs
backend/src/: assets.rs  blog.rs  home.rs  main.rs  posts.rs  projects.rs  rss.rs  state.rs
backend/src/app/: mod.rs  posts.rs
content/: RFFP-0-on-the-rust-learning-curve.md  _index.md  about-this-blog.md  home.md  posts.toml  projects.toml
content/pages/: projects.md
content/pages/about/: index.md
content/pages/archive/: index.md
crates/builder/: Cargo.toml  README.md
crates/builder/src/: assets.rs  home.rs  main.rs  posts.rs  state.rs
crates/frontend/: Cargo.toml  README.md
crates/frontend/.cargo/: config.toml
crates/frontend/src/: app.rs  blog.rs  home.rs  main.rs  posts.rs  project.rs  utils.rs
crates/model/: Cargo.toml
crates/model/src/: home.rs  lib.rs  post.rs  server.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/data/: Why Rust..md
frontend/src/: app.rs  blog.rs  home.rs  main.rs  palette.rs  posts.rs  project.rs  terminal.rs  touch_scroll.rs  utils.rs
model/: Cargo.toml  README.md
model/assets/: gruvbox.dump
model/src/: api.rs  blog.rs  home.rs  lib.rs  post.rs  project.rs  server.rs
page/1/: index.html
projects/: index.html
rffp-0-on-the-rust-learning-curve/: index.html
scripts/: compile_tui.sh
tui/: home.json  index.html  posts.json  projects.json
tui/posts/: RFFP-0-on-the-rust-learning-curve.json  about-this-blog.json
