[package]
name = "avid-rustacean-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
avid-rustacean-model = { path = "../model", features = ["server"] }
axum = { version = "0.7", features = ["macros"] }
shuttle-runtime = { version = "0.40.0" }
shuttle-shared-db = { version = "0.39.0", features = ["mongodb"] }
shuttle-axum = { version = "0.39.0" }
tokio = { version = "1.28", features = ["sync"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = { version = "1.0" }
mongodb = { version = "2.3", features = ["tokio-runtime"] }
futures = "0.3"
troupe = "0.1.0"
tower-http = { version = "0.5", features = ["cors"] }
http = { version = "1.0" }
tracing = "0.1.40"
shuttle-secrets = "0.39.0"
sha2 = "0.10.8"
hex-literal = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
toml = { version = "0.8.10", features = ["parse"] }
rss = "2.0.7"
url-escape = "0.1.1"

[build-dependencies]
flate2 = "1.0"
