[package]
name = "avid-rustacean-frontend"
version = "0.2.0"
edition = "2021"

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
avid-rustacean-model = { path = "../model" }
webatui = { path = "../../webatui" }
ratatui = { version = "0.25", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
derive_more = "0.99.17"
url-escape = "0.1.1"
serde = { version = "1.0.193", features = ["derive"] }
gloo-net = { version = "0.5", features = ["json", "http"] }
implicit-clone = "=0.4.8"
base16-palettes = { version = "0.1.0", features = ["gruvbox"] }
