[package]
name = "avid-rustacean-frontend"
version = "0.2.0"
edition = "2021"

[profile.release]
# Reduces the binary size of the WASM file.
lto = true
opt-level="z"
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
avid-rustacean-model = { path = "../model" }
webatui = { version = "0.1" }
ratatui = { version = "=0.29", default-features = false, features = ["all-widgets", "unstable-rendered-line-info"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = { version = "0.18" }
# TODO: This does not need to be full.
derive_more = { version = "1.0", features = ["full"] }
url-escape = "0.1.1"
serde = { version = "1.0.204", features = ["derive"] }
gloo-net = { version = "0.6", features = ["json", "http"] }
implicit-clone = "0.5"
base16-palettes = { version = "0.1.0", features = ["gruvbox"] }
