[package]
name = "avid-rustacean-model"
version = "0.1.0"
edition = "2021"

[features]
server = ["markdown", "syntect"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Server-only
markdown = { version = "1.0.0-alpha.16", optional = true }
syntect = { version = "5.1.0", optional = true }
