[package]
name = "avid-rustacean-builder"
version = "0.2.0"
edition = "2021"

[dependencies]
avid-rustacean-model = { path = "../model", features = ["server"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = { version = "1.0" }
futures = "0.3"
tracing = "0.1.40"
chrono = { version = "0.4", features = ["serde"] }
toml = { version = "0.8.14", features = ["parse"] }
