[package]
name = "avid-rustacean-model"
version = "0.2.0"
edition = "2021"

[features]
server = ["markdown", "syntect"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14.0"

# Server-only
markdown = { version = "1.0.0-alpha.18", optional = true }
syntect = { version = "5.1.0", optional = true }
